на проверку
1. как завершить метод с редактированием юзера?